# machine-learning-framework

./: .gitignore  README.md  app.py  docker-compose.yml  dockerfile  dockerfile_streamlit  main.py  pyproject.toml  readme.txt  streamlit-deployment.yaml
machine_learning_framework/model/: classifier.py  clustering.py  regressor.py
machine_learning_framework/postprocessing/: metrics.py
machine_learning_framework/preprocessing/: analyzer.py  preprocessing_utils.py
tests/: test_data_processing.py
